--- a/site/src/App.css
+++ b/site/src/App.css
@@ -43,8 +43,8 @@ body {
 }
 
 .buzz-motto {
-  color: #9f9f9f;
-  font-size: 0.9rem;
+  color: #b9b9b9;
+  font-size: 1.0rem;
   margin-bottom: 20px;
   line-height: 1.4;
 }
