--- a/site/src/CodeBlock.css
+++ b/site/src/CodeBlock.css
@@ -13,8 +13,8 @@
 
 .code-block-title {
   padding: 0.75rem 1rem;
-  background: #3737370d;
-  color: #b2b2b2;;
+  background: #2222220d;
+  color: #c4c4c4;;
   font-size: 0.875rem;
   font-weight: 600;
   border-bottom: 1px solid rgba(254, 225, 0, 0.1);
